# great-tit-hits

./: README.md  package-lock.json  pyproject.toml
docs/: bone-colormap.json  colormap.js  index.html  mkdocs.yml
docs/content/: index.md  pipeline.md
docs/content/metadata/: feature_vectors.md  great-tit-hits-crowsetta.md  great-tit-hits.md  main.md  morphometrics.md  nestboxes.md  wytham_map.md
docs/content/songs/: song-files.md
docs/css/: styles.css  uikit.css
docs/js/: audioviz.js
docs/site/: 404.html  index.html
docs/site/css/: terminal.css  theme.css
docs/site/metadata/feature_vectors/: index.html
docs/site/metadata/great-tit-hits/: index.html
docs/site/metadata/great-tit-hits-crowsetta/: index.html
docs/site/metadata/main/: index.html
docs/site/metadata/morphometrics/: index.html
docs/site/metadata/nestboxes/: index.html
docs/site/metadata/wytham_map/: index.html
docs/site/pipeline/: index.html
docs/site/search/: search_index.json
docs/site/songs/song-files/: index.html
docs/termtheme/: base.html  mkdocs_theme.yml
docs/termtheme/css/: terminal.css  theme.css
docs/termtheme/css/palettes/: dark.css
docs/termtheme/css/search/: bootstrap-modal.css
docs/termtheme/partials/: footer.html  styles.html
docs/termtheme/partials/top-nav/: menu.html  top.html
